Fix: titre Rôles en jeu aligné gauche + couleur #888 comme Cimetière

--- a/Little-lies/src/components/Roles/Roles.scss
+++ b/Little-lies/src/components/Roles/Roles.scss
@@ -7,8 +7,9 @@
     font-family: 'Cinzel', serif;
     font-size: 16px;
     margin: 0 0 8px 0;
-    color: #ddd;
-    i { margin-right: 6px; }
+    text-align: left;
+    color: #888;
+    i { margin-right: 6px; color: #888; }
   }
 }
 
